
  - Fix for Bug#38954 (11749415), DATA TRUNCATION WHILE USING BIT(1) IN STORED PROCEDURE WITH INOUT TYPE.

  - Fix for Bug#85317 (25672958), EXECUTE BATCH WILL THROW NULL POINTER EXCEPTION WHERE THE COLUMN IS BLOB!

  - Fix for Bug#105915 (33678490), Connector/J 8 server prepared statement precision loss in execute batch.

  - Fix for Bug#104349 (33563548), com.mysql.cj NPE.

  - WL#14750, Better unification of query bindings.

  - WL#14834, Support for FIDO authentication.

  - WL#14835, Align TLS option checking across connectors.

Version 8.0.28

  - Fix for Bug#99260 (31189960), statement.setQueryTimeout,creates a database connection and does not close.

  - Fix for Bug#103324 (32770013), X DevAPI Collection.replaceOne() missing matching _id check.

  - Fix for Bug#105197 (33461744), Statement.executeQuery() may return non-navigable ResultSet.

  - Fix for Bug#105323 (33507321), README.md contains broken links.

  - Fix for Bug#96900 (30355150), STATEMENT.CANCEL()CREATE A DATABASE CONNECTION BUT DOES NOT CLOSE THE CONNECTION.

  - Fix for Bug#104067 (33054827), No reset autoCommit after unknown issue occurs.
    Thanks to Tingyu Wei for his contribution.

  - Fix for Bug#85223 (25656020), MYSQLSQLXML SETSTRING CRASH.

  - Fix for Bug#84365 (33425867), INSERT..VALUE with VALUES function lead to a StringIndexOutOfBoundsException.

  - Fix for Bug#105211 (33468860), class java.time.LocalDate cannot be cast to class java.sql.Date.

  - Fix for Bug#101389 (32089018), GETWARNINGS SHOULD CHECK WARNING COUNT BEFORE SENDING SHOW.

  - Fix for Bug#33488091, Remove all references to xdevapi.useAsyncProtocol from properties and code.

  - WL#14805, Remove support for TLS 1.0 and 1.1.

  - WL#14650, Support for MFA (multi factor authentication) authentication.

Version 8.0.27

  - Fix for Bug#103612 (32902019), Incorrectly identified WITH...SELECT as unsafe for read-only connections.
